--- a/src/app/list-item/list-item.component.html
+++ b/src/app/list-item/list-item.component.html
@@ -1,1 +1,9 @@
-<p>list-item works!</p>
+<div>
+  <span class="b4">{{character.name}}</span>
+  <button type="button" class="btn btn-primary" (click)="changeSide('light')">
+      Light
+    </button>
+    <button type="button" class="btn btn-danger" (click)="changeSide('dark')">
+      Dark
+    </button>
+</div>
