--- a/src/app/star-list/star-list.component.html
+++ b/src/app/star-list/star-list.component.html
@@ -1,3 +1,5 @@
 <ul class="list-group">
-  <li class="list-group-item" *ngFor="let char of characters">{{char.name}}</li>
+  <li class="list-group-item" *ngFor="let char of characters">
+    <app-list-item [character]="char" (sideChanged)="onChangeSide($event)"></app-list-item>
+  </li>
 </ul>
