--- a/src/app/app-tab/app-tab.component.html
+++ b/src/app/app-tab/app-tab.component.html
@@ -1,3 +1,7 @@
+<div class="container">
+  <app-create-star></app-create-star>
+</div>
+
 <div class="container" style="margin-block-end: 2%">
   <div class="row">
     <div class="col-12">
