Added nav bar, routing and styling

--- a/src/app/app-tab/app-tab.component.html
+++ b/src/app/app-tab/app-tab.component.html
@@ -1,8 +1,4 @@
-<div class="container">
-  <app-create-star></app-create-star>
-</div>
-
-<div class="container" style="margin-block-end: 2%">
+<div class="container shadow-sm p-3 mb-5 bg-white rounded" style="margin-block-end: 2%">
   <div class="row">
     <div class="col-12">
       <ul class="nav nav-tabs justify-content-center nav-pills">
