--- a/src/app/list-item/list-item.component.html
+++ b/src/app/list-item/list-item.component.html
@@ -1,15 +1,10 @@
-<div class="container center">
-  <div class="container">
-    <div class="row justify-content-md-center">
-      <div class="col col-lg-2">
-        <span class="col">{{character.name}}</span>
-      </div>
-      <div class="col-md-auto">
-        <button type="button" class="btn btn-primary" (click)="changeSide('light')">Light</button>
-      </div>
-      <div class="col col-lg-2">
-        <button type="button" class="btn btn-danger" (click)="changeSide('dark')">Dark</button>
-      </div>
-    </div>
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">{{character.name}}</h5>
+  </div>
+  <div class="card-footer">
+    <button type="button" class="btn btn-primary" (click)="changeSide('light')">Light</button>
+    &nbsp;
+    <button type="button" class="btn btn-danger" (click)="changeSide('dark')">Dark</button>
   </div>
 </div>
