--- a/src/app/app-tab/app-tab.component.html
+++ b/src/app/app-tab/app-tab.component.html
@@ -1,21 +1,13 @@
-<div class="container shadow-sm p-3 mb-5 bg-white rounded" style="margin-block-end: 2%">
-  <div class="row">
-    <div class="col-12">
-      <ul class="nav nav-tabs justify-content-center nav-pills">
-        <li class="nav-item">
-          <a class="nav-link" (click)="changeTab('all')" style="cursor: pointer"
-            [ngClass]="{'active': selectedSide ==='all'}">All Stars</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="changeTab('light')" style="cursor: pointer"
-            [ngClass]="{'active': selectedSide ==='light'}">Light</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="changeTab('dark')" style="cursor: pointer"
-            [ngClass]="{'active': selectedSide ==='dark'}">Dark</a>
-        </li>
-      </ul>
-      <app-star-list [characters]="getCharacters()" (changedSide)="sideChanged($event)"></app-star-list>
-    </div>
-  </div>
-</div>
+<ul class="nav nav-tabs justify-content-center">
+  <li class="nav-item">
+    <a class="nav-link" [routerLink]="['/characters/all']" routerLinkActive="active">All Stars</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" [routerLink]="['/characters/light']" routerLinkActive="active">Light</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" [routerLink]="['/characters/dark']" routerLinkActive="active">Dark</a>
+  </li>
+</ul>
+<router-outlet></router-outlet>
+
