--- a/src/app/list-item/list-item.component.html
+++ b/src/app/list-item/list-item.component.html
@@ -1,10 +1,11 @@
 <div class="card">
   <div class="card-body">
-    <h5 class="card-title">{{character.name}}</h5>
+      <h5 class="card-title">{{character.name}}</h5>
   </div>
-  <div class="card-footer">
+  <div class="card-footer  justify-content-center">
     <button type="button" class="btn btn-primary" (click)="changeSide('light')">Light</button>
     &nbsp;
     <button type="button" class="btn btn-danger" (click)="changeSide('dark')">Dark</button>
+    &nbsp;
   </div>
 </div>
